--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="80dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/ic_launcher24s"
+        android:src="@mipmap/ic_launcher24s"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -32,7 +32,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/splashicon"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="14dp"
         android:text="Axpress logistic App"
         android:textColor="@color/text_iconColor"
         android:textSize="18sp"
