--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,11 +8,11 @@
 
     <ImageView
         android:id="@+id/splashicon"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/ic_launcher24s" />
+        android:src="@mipmap/ic_launcher24s" />
 
     <TextView
         android:layout_width="wrap_content"
