--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.it2.axpresslogisticapp.RegistrationActivity">
+    tools:context="com.example.it2.axpresslogisticapp.acitvities.RegistrationActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -69,6 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:textColor="@color/colorPrimary"
             android:text="@string/redirectOnRegistration_text_btn" />
 
 
