--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:background="@color/colorPrimary"
     android:paddingLeft="24dp"
     android:paddingRight="24dp"
-    tools:context="com.example.it2.axpresslogisticapp.MainActivity">
+    tools:context="com.example.it2.axpresslogisticapp.acitvities.MainActivity">
 
     <ImageView
         android:id="@+id/splashicon"
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/splashicon"
         android:layout_centerHorizontal="true"
-        android:text="Axpress logistic App"
+        android:text="@string/app_name"
         android:textColor="@color/text_iconColor"
         android:textSize="18sp"
         android:textStyle="italic"
