--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.it2.axpresslogisticapp.RegistrationActivity">
+    tools:context="com.example.it2.axpresslogisticapp.acitvities.RegistrationActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
