--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,8 @@
     <color name="secondaryTextColor">#757575</color>
     <color name="dividerColor">#BDBDBD</color>
     <color name="text_iconColor">#FFFFFF</color>
+    <color name="editTextColor">#eceff1</color>
 
     <color name="btn_pressedColor">#536DFE</color>
-    <color name="btn_enabledColor">#03A9F4</color>
+    <color name="btn_enabledColor">#40c4ff</color>
 </resources><!--<resources>--><!--<color name="colorPrimary">#3F51B5</color>--><!--<color name="colorPrimaryDark">#303F9F</color>--><!--<color name="colorAccent">#FF4081</color>--><!--</resources>-->
