custom button, flow intigration

--- a/app/src/main/res/layout/operation_item_list.xml
+++ b/app/src/main/res/layout/operation_item_list.xml
@@ -11,6 +11,7 @@
     android:background="@color/cardview_dark_background">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
