--- a/app/src/main/res/drawable/button_enabled.xml
+++ b/app/src/main/res/drawable/button_enabled.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/btn_enabledColor" />
+    <solid android:color="@color/colorAccent" />
     <corners android:radius="10dp" />
 
     <stroke
         android:width="0dp"
-        android:color="#03A9F4" />
+        android:color="@color/colorAccent" />
     <padding
         android:bottom="15dp"
         android:left="10dp"
