--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
             android:layout_gravity="center_horizontal"
             android:src="@drawable/ic_launcher24s" />
 
-        //Employee ID.
+        <!--Employee ID.-->
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -54,15 +54,29 @@
 
         //Login Button
 
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/btn_login"
-            android:layout_width="fill_parent"
+        <!--<android.support.v7.widget.AppCompatButton-->
+            <!--android:id="@+id/btn_login"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginBottom="24dp"-->
+            <!--android:layout_marginTop="24dp"-->
+            <!--android:background="@drawable/button_shape"-->
+            <!--android:padding="12dp"-->
+            <!--android:text="@string/login_btn" />-->
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:layout_marginTop="24dp"
-            android:background="@drawable/button_shape"
-            android:padding="12dp"
-            android:text="@string/login_btn" />
+            android:layout_below="@id/logo_text"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:layout_marginTop="20dp"
+            android:orientation="vertical">
+
+            <include
+                android:id="@+id/btn_login"
+                layout="@layout/primary_button_large" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/redirectRegistrationPage_btnId"
