--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
     <color name="colorPrimary">#F44336</color>
     <color name="colorPrimaryDark">#D32F2F</color>
     <color name="lightPrimaryColor">#FFCDD2</color>
-    <color name="colorAccent">#536DFE</color>
+    <color name="colorAccent">#03A9F4</color>
+
     <color name="primaryTextColor">#212121</color>
     <color name="secondaryTextColor">#757575</color>
     <color name="dividerColor">#BDBDBD</color>
@@ -11,5 +12,8 @@
     <color name="editTextColor">#eceff1</color>
 
     <color name="btn_pressedColor">#536DFE</color>
-    <color name="btn_enabledColor">#40c4ff</color>
+    <color name="btn_enabledColor">#03A9F4</color>
+
+    <color name="white">#FFFFFF</color>
+
 </resources><!--<resources>--><!--<color name="colorPrimary">#3F51B5</color>--><!--<color name="colorPrimaryDark">#303F9F</color>--><!--<color name="colorAccent">#FF4081</color>--><!--</resources>-->
