--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,8 @@
     <dimen name="app_bar_height">256dp</dimen>
     <dimen name="expanded_toolbar_title_margin_start">64dp</dimen>
     <dimen name="layout_width_height_100dp">100dp</dimen>
+
+
+    <dimen name="primary_button_width">250dp</dimen>
+
 </resources>
