--- a/app/src/main/res/layout/content_main_home.xml
+++ b/app/src/main/res/layout/content_main_home.xml
@@ -45,6 +45,7 @@
         android:id="@+id/nestedscrollview"
         android:layout_height="match_parent"
         android:fillViewport="true"
+        android:layout_marginBottom="10dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
@@ -60,7 +61,7 @@
                 android:columnWidth="100dp"
                 android:gravity="center"
                 android:listSelector="#00000000"
-                android:numColumns="2"
+                android:numColumns="3"
                 android:divider="@color/colorPrimaryDark"
                 android:dividerHeight="1dip"
                 android:stretchMode="columnWidth" />
