--- a/app/src/main/res/layout/homepage_grid_item.xml
+++ b/app/src/main/res/layout/homepage_grid_item.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginBottom="16dp"
+    android:layout_marginBottom="8dp"
     app:cardElevation="10dp"
     app:cardUseCompatPadding="true"
     app:cardCornerRadius="5dp">
@@ -18,24 +18,26 @@
 
         <ImageView
             android:id="@+id/grid_item_iconId"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:src="@drawable/userlogo"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="5dp"
+            android:layout_alignRight="@+id/grid_item_textviewId"
+            android:layout_alignEnd="@+id/grid_item_textviewId"
+            android:layout_alignLeft="@+id/grid_item_textviewId"
+            android:layout_alignStart="@+id/grid_item_textviewId"/>
 
         <TextView
             android:id="@+id/grid_item_textviewId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="3dp"
             android:text="@string/operations"
             android:layout_below="@+id/grid_item_iconId"
             android:textStyle="bold"
-            android:textAlignment="center"
-            android:layout_alignRight="@+id/grid_item_iconId"
-            android:layout_alignEnd="@+id/grid_item_iconId"
-            android:layout_alignLeft="@+id/grid_item_iconId"
-            android:layout_alignStart="@+id/grid_item_iconId" />
+            android:textSize="20sp"
+            android:textColor="@color/primaryTextColor"
+            android:textAlignment="center"/>
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
