--- a/app/src/main/res/drawable/grayshade.xml
+++ b/app/src/main/res/drawable/grayshade.xml
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="@color/dividerColor" />
+    <corners android:radius="10dp" />
 
-</selector>
+    <stroke
+        android:width="0dp"
+        android:color="@color/dividerColor" />
+    <padding
+        android:bottom="15dp"
+        android:left="10dp"
+        android:right="10dp"
+        android:top="15dp" />
+
+</shape>
