--- a/app/src/main/res/layout/activity_hrms.xml
+++ b/app/src/main/res/layout/activity_hrms.xml
@@ -7,33 +7,39 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark">
 
-
-    <android.support.v4.widget.NestedScrollView
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:id="@+id/nestedscrollview"
         android:layout_height="match_parent"
-        android:fillViewport="true"
-        android:layout_marginBottom="10dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        app:cardCornerRadius="8dp"
+        android:layout_margin="5dp">
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
+            android:id="@+id/nestedscrollview"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:fillViewport="true"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <GridView
-                android:id="@+id/grid"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/linearLayout"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:columnWidth="100dp"
-                android:gravity="center"
-                android:listSelector="#00000000"
-                android:numColumns="3"
-                android:divider="@color/colorPrimaryDark"
-                android:dividerHeight="1dip"
-                android:stretchMode="columnWidth" />
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+                android:orientation="vertical">
+
+                <GridView
+                    android:id="@+id/grid"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:columnWidth="120dp"
+                    android:gravity="center"
+                    android:listSelector="#00000000"
+                    android:numColumns="3"
+                    android:divider="@color/colorPrimaryDark"
+                    android:dividerHeight="1dip"
+                    android:stretchMode="columnWidth" />
+            </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
+
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
