--- a/app/src/main/res/layout/content_main_home.xml
+++ b/app/src/main/res/layout/content_main_home.xml
@@ -11,32 +11,17 @@
         android:id="@+id/appbar_layout"
         android:background="@color/colorPrimaryDark"
         android:layout_height="@dimen/app_bar_height"
+        android:gravity="center"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar_android_layoutId"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:contentScrim="?attr/colorPrimaryDark"
-            app:expandedTitleMarginStart="@dimen/expanded_toolbar_title_margin_start"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
-            <ImageView
-                android:layout_marginTop="30dp"
-                android:id="@+id/image_view"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/ic_launcher24s"
-                android:layout_gravity="center"/>
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin" />
-
-        </android.support.design.widget.CollapsingToolbarLayout>
+        <ImageView
+            android:layout_marginTop="30dp"
+            android:id="@+id/image_view"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_launcher24s"
+            android:layout_gravity="center"/>
 
     </android.support.design.widget.AppBarLayout>
 
@@ -62,6 +47,8 @@
                 android:gravity="center"
                 android:listSelector="#00000000"
                 android:numColumns="3"
+                android:horizontalSpacing="-10dp"
+                android:verticalSpacing="-10dip"
                 android:divider="@color/colorPrimaryDark"
                 android:dividerHeight="1dip"
                 android:stretchMode="columnWidth" />
