--- a/app/src/main/res/layout/activity_docket_enquiry.xml
+++ b/app/src/main/res/layout/activity_docket_enquiry.xml
@@ -54,6 +54,7 @@
     </LinearLayout>
 
     <EditText
+        android:id="@+id/input_edit_text_id"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
