--- a/app/src/main/res/layout/activity_mark_attendance.xml
+++ b/app/src/main/res/layout/activity_mark_attendance.xml
@@ -88,7 +88,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:gravity="center"
-                            android:text="@string/date_time"
+                            android:text="@string/branch"
                             android:textSize="15dp"
                             android:textStyle="bold" />
 
@@ -99,7 +99,53 @@
                             android:layout_marginLeft="10dp"
                             android:textSize="15dp"
                             android:layout_weight="1"
-                            android:text="30/05/2018 12:48:05 PM" />
+                            android:text="@string/branch_location" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="2dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:text="@string/department"
+                            android:textSize="15dp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/department_id"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="10dp"
+                            android:textSize="15dp"
+                            android:layout_weight="1"
+                            android:text="@string/department" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="2dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:text="@string/contact_no"
+                            android:textSize="15dp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/input_contact_id"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="10dp"
+                            android:textSize="15dp"
+                            android:layout_weight="1"
+                            android:text="9876543210" />
                     </LinearLayout>
                 </LinearLayout>
 
@@ -110,8 +156,8 @@
 
                     <ImageView
                         android:id="@+id/user_imageId"
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
+                        android:layout_width="95dp"
+                        android:layout_height="95dp"
                         android:layout_gravity="right"
                         android:src="@drawable/moon"/>
                 </LinearLayout>
@@ -128,6 +174,7 @@
                 android:text="Submit Attendance"
                 android:background="@drawable/button_shape"/>
         </LinearLayout>
+
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
