--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -86,7 +86,18 @@
             android:textColor="@color/colorPrimary"
             android:text="@string/redirectOnRegistration_text_btn" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/or"
+            android:layout_marginTop="10dp"/>
 
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/google_signIn_btn"
+            android:layout_gravity="center"
+            android:layout_height="match_parent"
+            android:layout_width="250dp" />
     </LinearLayout>
 
 </ScrollView>
