api integration in login

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context="com.example.it2.axpresslogisticapp.acitvities.RegistrationActivity">
+    android:fitsSystemWindows="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -49,51 +48,6 @@
                 android:inputType="textAutoComplete" />
         </android.support.design.widget.TextInputLayout>
 
-        //Employee Gender.
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp">
-
-            <EditText
-                android:id="@+id/input_gender_id"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/gender"
-                android:inputType="text" />
-        </android.support.design.widget.TextInputLayout>
-
-        //Employee Branch.
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp">
-
-            <EditText
-                android:id="@+id/input_branch_id"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/branch"
-                android:inputType="textAutoComplete" />
-        </android.support.design.widget.TextInputLayout>
-
-        //Employee Designation.
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp">
-
-            <EditText
-                android:id="@+id/input_destination_id"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/designation"
-                android:inputType="textAutoComplete" />
-        </android.support.design.widget.TextInputLayout>
-
         //Employee Email ID.
 
         <android.support.design.widget.TextInputLayout
@@ -126,18 +80,18 @@
 
         //Employee Password.
 
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp">
+        <!--<android.support.design.widget.TextInputLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="8dp">-->
 
-            <EditText
-                android:id="@+id/input_password_id"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/password"
-                android:inputType="textPassword" />
-        </android.support.design.widget.TextInputLayout>
+        <!--<EditText-->
+        <!--android:id="@+id/input_password_id"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:hint="@string/password"-->
+        <!--android:inputType="textPassword" />-->
+        <!--</android.support.design.widget.TextInputLayout>-->
         //Employee ConfrimPassword.
         <!--<android.support.design.widget.TextInputLayout-->
         <!--android:layout_width="match_parent"-->
