--- a/app/src/main/res/layout/nav_header_main_home.xml
+++ b/app/src/main/res/layout/nav_header_main_home.xml
@@ -31,6 +31,6 @@
         android:id="@+id/user_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="anujkrvaish@gmail.com" />
+        android:text="employee@gmail.com" />
 
 </LinearLayout>
