--- a/app/src/main/res/menu/activity_main_home_drawer.xml
+++ b/app/src/main/res/menu/activity_main_home_drawer.xml
@@ -4,7 +4,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_profile"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/icon_profile"
             android:title="My Profile" />
         <item
             android:id="@+id/nav_operations"
