--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -40,16 +40,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp">
 
-            <EditText
-                android:id="@+id/input_name_id"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/employee_name"
-                android:inputType="textAutoComplete" />
         </android.support.design.widget.TextInputLayout>
 
         //Employee Email ID.
-
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -70,49 +63,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp">
 
-            <EditText
-                android:id="@+id/input_contact_id"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/contact_no"
-                android:inputType="phone" />
         </android.support.design.widget.TextInputLayout>
-
-        //Employee Password.
-
-        <!--<android.support.design.widget.TextInputLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginTop="8dp">-->
-
-        <!--<EditText-->
-        <!--android:id="@+id/input_password_id"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:hint="@string/password"-->
-        <!--android:inputType="textPassword" />-->
-        <!--</android.support.design.widget.TextInputLayout>-->
-        //Employee ConfrimPassword.
-        <!--<android.support.design.widget.TextInputLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginBottom="8dp"-->
-        <!--android:layout_marginTop="8dp">-->
-
-        <!--<EditText-->
-        <!--android:id="@+id/input_confirm_password_id"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:hint="@string/confirm_password"-->
-        <!--android:inputType="textPassword"-->
-        <!--android:textColor="@color/text_iconColor" />-->
-        <!--</android.support.design.widget.TextInputLayout>-->
 
 
         //Registration Button
 
         <android.support.v7.widget.AppCompatButton
-            android:id="@+id/btn_registration"
+            android:id="@+id/btn_forgetPasswordBtn"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
