--- a/app/src/main/res/layout/activity_docket_enquiry.xml
+++ b/app/src/main/res/layout/activity_docket_enquiry.xml
@@ -21,8 +21,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp"
+        android:orientation="vertical">
 
         <RadioGroup
             android:id="@+id/radio_group_id"
@@ -30,31 +30,24 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <RadioButton
+                android:id="@+id/radiobtn_docket_id"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_marginRight="10dp"
+                android:text="@string/docket" />
 
-                <RadioButton
-                    android:id="@+id/radiobtn_docket_id"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:text="Docket" />
+            <RadioButton
+                android:id="@+id/radiobtn_invoice_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/invoice" />
 
-                <RadioButton
-                    android:id="@+id/radiobtn_invoice_id"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:text="Invoice" />
-
-            </LinearLayout>
         </RadioGroup>
     </LinearLayout>
 
     <EditText
-        android:id="@+id/input_edit_text_id"
+        android:id="@+id/input_editSearch_text_id"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
