--- a/app/src/main/res/drawable/button_pressed.xml
+++ b/app/src/main/res/drawable/button_pressed.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/colorAccent" />
+    <solid android:color="@color/secondaryTextColor" />
     <corners android:radius="10dp" />
 
     <stroke
-        android:width="2dp"
-        android:color="@color/colorAccent" />
+        android:width="0dp"
+        android:color="@color/secondaryTextColor" />
+    <padding
+        android:bottom="15dp"
+        android:left="10dp"
+        android:right="10dp"
+        android:top="15dp" />
 
 </shape>
