--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,9 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.it2.axpresslogisticapp.acitvities.RegistrationActivity">
+    tools:context="com.example.it2.axpresslogisticapp.acitvities.LoginActivity">
 
     <LinearLayout
+        android:id="@+id/login_LayoutView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -36,8 +37,6 @@
                 android:hint="@string/employee_id" />
         </android.support.design.widget.TextInputLayout>
 
-        //Employee Password.
-
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -52,17 +51,6 @@
                 android:inputType="textPassword" />
         </android.support.design.widget.TextInputLayout>
 
-        //Login Button
-
-        <!--<android.support.v7.widget.AppCompatButton-->
-            <!--android:id="@+id/btn_login"-->
-            <!--android:layout_width="fill_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginBottom="24dp"-->
-            <!--android:layout_marginTop="24dp"-->
-            <!--android:background="@drawable/button_shape"-->
-            <!--android:padding="12dp"-->
-            <!--android:text="@string/login_btn" />-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -85,6 +73,16 @@
             android:textColor="@color/colorPrimary"
             android:text="@string/forget_password_text_btn" />
 
+        <ProgressBar
+            android:layout_marginTop="20dp"
+            android:id="@+id/progressBarId"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
+
     </LinearLayout>
+
+
 
 </ScrollView>
