--- a/app/src/main/res/layout/activity_mark_attendance.xml
+++ b/app/src/main/res/layout/activity_mark_attendance.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical"
     tools:context=".acitvities.MarkAttendanceActivity">
 
+
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -216,4 +217,10 @@
 
     </android.support.v7.widget.CardView>
 
+    <ProgressBar
+        android:id="@+id/attendance_progressbarId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:visibility="gone"/>
 </LinearLayout>
