--- a/app/src/main/res/layout/activity_docket_enquiry.xml
+++ b/app/src/main/res/layout/activity_docket_enquiry.xml
@@ -52,6 +52,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:textAlignment="gravity"
+        android:inputType="number"
         android:background="@drawable/edittext_shape"
         android:shadowRadius="50"/>
 
