--- a/app/src/main/res/layout/challan_view.xml
+++ b/app/src/main/res/layout/challan_view.xml
@@ -20,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/challan_details"
+            android:layout_marginBottom="10dp"
             android:textAlignment="center"
             android:textStyle="bold"/>
         <LinearLayout
@@ -65,25 +66,32 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight=".15"
+                android:layout_weight=".4"
                 android:text="@string/from" />
 
             <TextView
                 android:id="@+id/txt_challan_date_fromID"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight=".3"/>
+                android:layout_weight=".6"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight=".15"
+                android:layout_weight=".4"
                 android:text="@string/to" />
 
             <TextView
                 android:id="@+id/txt_challan_date_toID"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight=".3" />
+                android:layout_weight=".6" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
