--- a/app/src/main/res/layout/challan_view.xml
+++ b/app/src/main/res/layout/challan_view.xml
@@ -1,132 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/challenCardView"
-    android:elevation="10dp"
-    android:layout_marginTop="1dp"
-    android:layout_marginLeft="2dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="2dp"
+    android:layout_marginLeft="2dp"
     android:layout_marginRight="2dp"
+    android:layout_marginTop="1dp"
+    android:elevation="10dp"
     android:padding="24dp"
     app:cardCornerRadius="5dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="24dp">
+
         <TextView
+            android:id="@+id/txt_challan_details_Id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/challan_details"
-            android:layout_marginBottom="10dp"
             android:textAlignment="center"
-            android:textStyle="bold"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight=".4"
-                android:text="@string/challen_noID" />
-
-            <TextView
-                android:id="@+id/txt_challen_no_ID"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight=".6" />
-        </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/challan_details_itemList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:visibility="gone">
 
-            <TextView
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight=".4"
-                android:text="@string/challen_date" />
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/txt_challen_dateID"
-                android:layout_width="0dp"
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".4"
+                    android:text="@string/challen_noID" />
+
+                <TextView
+                    android:id="@+id/txt_challen_no_ID"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".6" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight=".6" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".4"
+                    android:text="@string/challen_date" />
+
+                <TextView
+                    android:id="@+id/txt_challen_dateID"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".6" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".4"
+                    android:text="@string/from_to" />
+
+                <TextView
+                    android:id="@+id/txt_challan_date_fromID"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".15" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".05"
+                    android:text="/" />
+
+                <TextView
+                    android:id="@+id/txt_challan_date_toID"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".4"
+                    android:textAlignment="textStart" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".4"
+                    android:text="@string/vehical_no" />
+
+                <TextView
+                    android:id="@+id/txt_vehical_noID"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".6" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".4"
+                    android:text="@string/status" />
+
+                <TextView
+                    android:id="@+id/txt_vehical_statusID"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".6" />
+            </LinearLayout>
+
+
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight=".4"
-                android:text="@string/from" />
-
-            <TextView
-                android:id="@+id/txt_challan_date_fromID"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight=".6"/>
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight=".4"
-                android:text="@string/to" />
-
-            <TextView
-                android:id="@+id/txt_challan_date_toID"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight=".6" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight=".4"
-                android:text="@string/vehical_no" />
-
-            <TextView
-                android:id="@+id/txt_vehical_noID"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight=".6" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight=".4"
-                android:text="@string/status" />
-
-            <TextView
-                android:id="@+id/txt_vehical_statusID"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight=".6" />
-        </LinearLayout>
-
     </LinearLayout>
 </android.support.v7.widget.CardView>
