--- a/app/src/main/res/layout/homepage_grid_item.xml
+++ b/app/src/main/res/layout/homepage_grid_item.xml
@@ -30,13 +30,13 @@
         <TextView
             android:id="@+id/grid_item_textviewId"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
+            android:layout_below="@+id/grid_item_iconId"
             android:layout_marginTop="3dp"
             android:text="@string/operations"
-            android:layout_below="@+id/grid_item_iconId"
-            android:textSize="18sp"
+            android:textAlignment="center"
             android:textColor="@color/primaryTextColor"
-            android:textAlignment="center"/>
+            android:textSize="18sp" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
