--- a/app/src/main/res/layout/hrms_grid_item.xml
+++ b/app/src/main/res/layout/hrms_grid_item.xml
@@ -4,8 +4,6 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginBottom="8dp"
-    app:cardElevation="10dp"
     app:cardUseCompatPadding="true"
     app:cardCornerRadius="5dp">
 
@@ -29,14 +27,16 @@
 
         <TextView
             android:id="@+id/gridhrms_item_textviewId"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="3dp"
-            android:text="@string/operations"
+            android:layout_width="110dp"
+            android:layout_height="80dp"
             android:layout_below="@+id/gridhrms_item_iconId"
-            android:textSize="18sp"
+            android:layout_marginTop="3dp"
+            android:numColumns="auto_fit"
+            android:text="@string/operations"
+            android:textAlignment="center"
+            android:gravity="center_vertical"
             android:textColor="@color/primaryTextColor"
-            android:textAlignment="center"/>
+            android:textSize="18sp" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
